# repo-autoindex

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.rst
repo_autoindex/: __init__.py  api.py  base.py  cmd.py  template.py  tree.py  yum.py
repo_autoindex/_impl/: api.py  base.py  cmd.py  kickstart.py  pulp.py  template.py  tree.py  yum.py
repo_autoindex/templates/: index.html.j2
tests/: test_cmd.py  test_http_fetcher.py  test_import.py  test_kickstart_render_typical.py  test_noop.py  test_render_elision.py  test_yum_render_corrupt.py  test_yum_render_typical.py
tests/sample_kickstart_repo/: extra_files.json  treeinfo
tests/sample_kickstart_repo/repodata/: repomd.xml
tests/sample_pulp_repo/: PULP_MANIFEST
