[tool.poetry]
name = "repo-autoindex"
version = "1.1.0"
description = "Generic static HTML indexes of various repository types"
authors = ["Rohan McGovern <rmcgover@redhat.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/release-engineering/repo-autoindex"
repository = "https://github.com/release-engineering/repo-autoindex"


[tool.poetry.dependencies]
python = ">=3.9,<4"
aiohttp = ">=3.8.1"
defusedxml = ">=0.7.1"
Jinja2 = ">=3.1.2"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
mypy = ">=0.961"
pytest-asyncio = ">=0.18.3"
pytest-cov = ">=3.0.0"
Sphinx = "^5.1.1"
sphinx-argparse = "^0.3.1"

[tool.poetry.scripts]
"repo-autoindex" = "repo_autoindex._impl.cmd:entrypoint"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
safety = "^2.3.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
